--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
             <tr>
               <td>
                 <h1>Congrats. Vagrant is up.</h1>
-                <p>Now let's run through some very basic exercises to branch, edit, commit, and finally merge your changes using git. <b> Make sure you have a partner to work with. </b> </p>
+                <p>Now let's run through some very basic exercises to branch, edit, commit, and finally merge your changes using git. <b> Make sure you have a partner to work with. Both of you should work on one system.</b> </p>
                 <h2>Task One (Teammate #1)</h2>
                 <p>Go ahead and create a new branch with git, then open this file (www/index.html) and change the "bgcolor" attribute of this page from "#F6F6F6" to "#81BEF7".</p>
                 <p>When you've made that change, save the file and use "git commit" to commit the modified file to your new branch.
