--- a/www/bigleagues.html
+++ b/www/bigleagues.html
@@ -22,7 +22,7 @@
               <td>
                 <h1>You've proven yourself with git...</h1>
                 <p>...so let's go ahead and create a clone of our actual application repository.</p>
-                <p><b>Take a look at the Platform Engineer Slack channel for the URL.</b> </p>
+                <p><b>Have a look at the Platform Engineer Training Slack channel for the repo URL.</b> </p>
                 <h2>Task One (Teamwork)</h2>
                 <p>- From our Slack channel, make a clone of our git repo.</p>
                 <p>- Change directories to the cloned repository</p>
