added major new lesson, cleaned up others

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body bgcolor="#F6F6F6">
+<body bgcolor="#81BEF7">
 
   <!-- body -->
   <table class="body-wrap">
@@ -28,7 +28,7 @@
                 <p>Now refresh the page in your browser to see your changes.</p>
                 <h2>Task Two (Teammate #2)</h2>
                 <p>Create another new branch, and edit the following line to include your e-mail address.</p>
-                <p>My email is: _____@mindmixer.com </p>
+                <p>My email is: _______@something.com </p>
                 <p>Save "index.html", commit the change to your branch, and refresh the page to confirm your changes.</p>
                 <h2>Task Three (Teamwork)</h2>
                 <p>Switch to branch "master" and merge in Teammate #1's branch. Save, commit, confirm.</p>
